agrego detalles desafío

--- a/src/components/ItemListContainer.css
+++ b/src/components/ItemListContainer.css
@@ -12,3 +12,10 @@
     font-size: 1.4rem;
     color: #3c3c3c;
 }
+
+.bienvenida {
+    text-align: center;
+    font-size: 30px;
+    color: #3c3c3c;
+    
+}
