--- a/src/components/ItemCount.css
+++ b/src/components/ItemCount.css
@@ -1,10 +1,8 @@
 .contenedor-contador {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 200px;
     text-align: center;
-    border: 1px solid #ec6b75;
-    border-radius: 5px;
     margin: auto;
     margin-top: 50px;
     font-size: 20px;
@@ -37,10 +35,11 @@
 
 .botonAgregarAlCarrito button {
     height: 40px;
-    width: 400px;
-    margin-top: 30px;
+    width: 200px;
+    margin-top: 10px;
     background-color: #ec6b75;
-    border: 0px;
+    border: 1px solid white;
+    border-radius: 10px;
     color: white;
     font-size: 16px;
     cursor: pointer;
