--- a/src/components/CartWidget.css
+++ b/src/components/CartWidget.css
@@ -7,7 +7,7 @@
     align-content: center;
 }
 
-.imagenCarrito a img {
+.imagenCarrito img {
     height: 30px;
     display: flex;
     flex-direction: row;
