--- a/src/components/ItemList.css
+++ b/src/components/ItemList.css
@@ -1,6 +1,7 @@
 .contenedor-items-tienda {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     align-content: center;
