Entrega proyecto final

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   background-color: #fbfbfb;
+  font-family: "Montserrat", sans-serif;
 }
 .contenedor-principal-menu header {
   display: flex;
