--- a/src/components/ItemList.css
+++ b/src/components/ItemList.css
@@ -5,5 +5,6 @@
     align-items: center;
     justify-content: center;
     align-content: center;
-    
+    max-width: 1400px;
+    margin: auto;
 }
